[project]
name = "budget-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databases>=0.9.0",
    "fastapi>=0.136.1",
    "groq>=0.37.1",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.0",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
